Move static CoreComm methods to ContikiMoteType
This functionality is intimately tied to ContikiMoteType,
so put the methods there.